@@ -26,8 +26,14 @@ enum
 	COL_PIXBUF = 0,
 	COL_NAME,
 	COL_USER,
+	COL_STATUS,
 	COL_MEM,
+	COL_VMSIZE,
+	COL_MEMRES,
+	COL_MEMSHARED,
+	COL_MEMRSS,
 	COL_CPU,
+	COL_NICE,
 	COL_PID,
 	COL_POINTER,
 	NUM_COLUMNS,
