@@ -1,3 +1,13 @@
+2001-11-11  Kevin Vandersloot <kfv101@psu.edu>
+
+	* proctable.c: add extra columns like nice value, more
+	memory values etc.
+
+	* procdialogs.c: add the ability to custumize the columns
+	in the prefs dialog
+
+	* procman.c: check to see if settings exist for tree state
+
 2001-11-10  Kevin Vandersloot <kfv101@psu.edu>
 
 	* callbacks.c: grab the focuse to the search entry when searching
